# tfit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yaml  package.yaml
docs/: conf.py  data_api.rst  index.rst  index_api.rst  reference.rst  references.bib  setup.rst  start.md  tutorial1.ipynb
src/tfit/: cli.py  config.py  setup.py  utils.py
src/tfit/data/: biomart.py  hippie.py  stringdb.py
src/tfitpy/: __init__.py  cli.py  config.py  main.py  setup.py
src/tfitpy/data/: __init__.py  biogrid.py  biomart.py  hippie.py  stringdb.py
tests/: test1.py
