[project]
name = "tfit"
version = "0.0.1"
description = "TFit : Assessing the combinatorial potential of Transcription Factors in Gene Regulation"
authors = [
    {name = "SVJ"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "8.2.3"
myst-nb = "^1.3.0"
jupyter = "^1.1.1"
sphinx-book-theme = "^1.1.4"
sphinx-autodoc-typehints = "3.5.1"

